Рефактор OrderService